--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -3,7 +3,6 @@
 app-admin/keepassxc *FLAGS-=-flto* # segfaults on start since Qt 5.15.1
 app-emulation/dosemu *FLAGS-=-flto* # Issue #163
 app-emulation/libguestfs *FLAGS-=-flto*
-app-emulation/libpod *FLAGS-=-flto*
 app-emulation/qemu *FLAGS-=-flto* *FLAGS+=-fno-strict-aliasing # required to compile qemu
 app-emulation/virtualbox-extpack-oracle *FLAGS-=-flto*
 app-emulation/virtualbox *FLAGS-=-flto*
@@ -11,7 +10,6 @@ app-emulation/wine* *FLAGS-=-flto*
 app-office/gnucash *FLAGS-=-flto* # error: type ‘struct _iterate’ violates the C++ One Definition Rule [-Werror=odr]
 app-office/libreoffice "has firebird ${IUSE//+} && use firebird && FlagSubAllFlags -flto*"
 app-office/scribus *FLAGS-=-flto* # Scribus crashes on startup if compiled with LTO
-<app-text/mupdf-1.12.0 *FLAGS-=-flto* # Only older versions are affected
 app-text/texlive-core *FLAGS-=-flto*
 app-text/yodl *FLAGS-=-flto* # Fixes build
 cross-arm-none-eabi/newlib *FLAGS-=-flto* # Causes 'arm-none-eabi-gcc' to segfault
@@ -21,7 +19,6 @@ dev-db/firebird *FLAGS-=-flto*
 dev-db/mariadb *FLAGS-=-flto*
 dev-db/mysql-connector-c *FLAGS-=-flto* # required to compiled mysql-connector-c
 games-fps/gzdoom *FLAGS-=-flto* # Assertion `Class != nullptr' failed. SIGABRT
-games-fps/zandronum *FLAGS-=-flto* #Can't read wads properly with LTO
 dev-java/icedtea *FLAGS-=-flto*
 <dev-java/openjdk-14 *FLAGS-=-flto* # Issue #204, undefined references with LTO.
 dev-lang/erlang *FLAGS-=-flto* # Starting with Erlang 24.0, yeccparser.erl: internal error in pass beam_kernel_to_ssa
@@ -32,23 +29,18 @@ dev-lang/perl *FLAGS-=-flto*
 dev-lang/rust *FLAGS-=-flto*
 dev-lang/spidermonkey *FLAGS-=-flto*
 dev-libs/elfutils *FLAGS-=-flto*
-dev-libs/intel-neo *FLAGS-=-flto* # error: violates the C++ One Definition Rule [-Werror=odr]
 dev-libs/libbpf *FLAGS-=-flto* # lto-wrapper link failure
 dev-libs/libsigsegv *FLAGS-=-flto* # Issue #189
 dev-libs/weston *FLAGS-=-flto*
 dev-python/libvirt-python *FLAGS-=-flto* # ICE with GCC 10.2.0
-dev-qt/qtwebkit *FLAGS-=-flto*
 dev-scheme/guile *FLAGS-=-flto* # Issue #193
 dev-scheme/racket *FLAGS-=-flto* *FLAGS-="${IPAPTA}" # Undefined references and multiple segfaults / violations during build.
-dev-tex/chktex "use pcre && FlagSubAllFlags -flto*" # Segmentation faults as libpcre doesn't get linked-in properly
 dev-util/github-cli *FLAGS-=-flto*
 dev-util/perf *FLAGS-=-flto*
 dev-util/radare2 *FLAGS-=-flto* # ICE in IPA pass
 dev-util/valgrind *FLAGS-=-flto*
 dev-vcs/cvs *FLAGS-=-flto* # Undefined references
 games-action/extreme-tuxracer *FLAGS-=-flto*
-games-emulation/mupen64plus-libretro *FLAGS-=-flto*
-games-emulation/parallel-n64-libretro *FLAGS-=-flto*
 gnome-base/gnome-keyring *FLAGS-=-flto*
 gnustep-base/gnustep-make *FLAGS-=-flto* # Issue #581, tools to build gnustep-base/gnustep-base, if built with LTO doesn't build gnustep code
 kde-apps/kdenlive *FLAGS-=-flto*
@@ -75,21 +67,19 @@ net-p2p/cpuminer-opt *FLAGS-=-flto*
 net-p2p/retroshare *FLAGS-=-flto* # Issue #129, ICE on amd64
 net-wireless/aircrack-ng *FLAGS-=-flto*
 sci-electronics/kicad *FLAGS-=-flto* # Issue #168
-sci-libs/arrayfire *FLAGS-=-flto*
-sci-libs/scipy *FLAGS-=-flto*
+dev-python/scipy *FLAGS-=-flto*
 sys-apps/acl *FLAGS-=-flto* # Issue #209, builds fine but we cannot set any acl value using the program.
 sys-apps/fakechroot *FLAGS-=-flto* # "Cgraph edge statement index out of range" error when linking with LTO enabled
 sys-apps/fwupd *FLAGS-=-flto* # Issue #225, LTO causes runtime failures
 sys-apps/man-db *FLAGS-=-flto* # Issue #403, LTO causes runtime failures
-sys-apps/nix *FLAGS-=-flto* # Issue #222, LTO causes runtime failures
 sys-cluster/ceph *FLAGS-=-flto*  # linking error during compilation
 sys-cluster/glusterfs *FLAGS-=-flto* # undefined reference to `glfs_subvol_done'
 sys-devel/clang *FLAGS-=-flto* # Issue #619 Same as above
 sys-devel/gdb *FLAGS-=-flto*
 sys-devel/llvm *FLAGS-=-flto* # Issue #619 temporarily disabled for now due to build errors
-sys-fabric/libibverbs *FLAGS-=-flto* # Issue #506, Undefined references
 sys-fs/fuse-common *FLAGS-=-flto*
 sys-fs/fuse *FLAGS-=-flto* # Issue #139 and #142, it appears the symbol __fuse_read_cmd goes missing if LTO is enabled, causing linking problems on some systems.  Using gold seems to help.
+>=sys-libs/efivar-38 *FLAGS-="-flto*" # Error when compiling with LTO per PR #823
 sys-libs/glibc *FLAGS-=-flto* #Alternative: *FLAGS+=-ffat-lto-objects *FLAGS-="${IPAPTA}" Fails in configure stage with LTO enabled, checking for builtin redirect.  With -ffat-lto-objects, and no -fipa-pta, we get further, but get multiple definition errors  Forcing past that yields undefined symbol errors.
 sys-libs/libcxxabi *FLAGS-=-flto* # /var/tmp/portage/sys-libs/libcxxabi-4.0.1/temp/ccXYODmk.ltrans0.ltrans.o:<artificial>:DW.ref.__gcc_personality_v0: error: undefined reference to '__gcc_personality_v0'
 sys-libs/libomp *FLAGS-=-flto* # Issue #619 libomp-11.0.0_rc4 fails to build with LTO
@@ -100,7 +90,6 @@ sys-libs/musl *FLAGS-=-flto*
 sys-process/criu *FLAGS-=-pipe* *FLAGS-=-flto* *FLAGS-="-fuse-linker-plugin" LDFLAGS-="-Wl,--hash-style=gnu" *FLAGS-="${GRAPHITE}" # Fewer settings may be possible. Needs testing. (Dependency of LXC.)
 sys-process/numactl *FLAGS-=-flto* # Undefined references
 www-apps/hugo *FLAGS-=-flto*
-www-misc/shellinabox *FLAGS-=-flto*
 x11-base/xorg-server *FLAGS-=-flto* # linking error during compilation
 x11-drivers/xf86-video-intel *FLAGS-=-flto*
 # END: lto
@@ -111,7 +100,6 @@ app-crypt/efitools *FLAGS+=-ffat-lto-objects # textrel?
 app-editors/vim "has perl ${IUSE//+} && use perl && FlagAddAllFlags -ffat-lto-objects" # required for perl USE flag
 dev-haskell/* *FLAGS+=-ffat-lto-objects #This is so non-portage GHC compilations work, as GHC is oblivious to LTO.  portage builds are fine.
 dev-lang/moarvm *FLAGS+=-ffat-lto-objects # required for perl6 (i.e., dev-lang/nqp and dev-lang/rakudo to build)
-dev-util/cargo *FLAGS+=-ffat-lto-objects # fails to link against git2 functions without
 dev-util/cargo-c *FLAGS+=-ffat-lto-objects # fails to link against ssh functions without
 dev-util/sccache *FLAGS+=-ffat-lto-objects # fails to link
 media-libs/libvpx *FLAGS+=-ffat-lto-objects # Test failure
@@ -124,10 +112,6 @@ sys-libs/libosinfo *FLAGS+=-ffat-lto-objects # Causes virt-manager to segfault w
 sys-power/nut *FLAGS+=-ffat-lto-objects # fails during configure otherwise
 x11-terms/alacritty *FLAGS+=-ffat-lto-objects
 # END: ffat-lto-objects
-
-# BEGIN: -flto-partition=none workarounds
-=sys-libs/efivar-37 *FLAGS+="-flto-partition=none"
-# END: -flto-partition=none workarounds
 
 # BEGIN: LTO not recommended
 # Packages which can be built with LTO but leads to problems/crashes/segfaults
@@ -164,7 +148,6 @@ app-misc/openrgb *FLAGS-=-flto* # Segmentation fault on launch
 # Packages which require build workarounds to be built with LTO that can be resolved directly in *FLAGS
 dev-lisp/clisp *FLAGS+=-falign-functions # Issue #128.  Function alignment problem.
 kde-apps/dolphin *FLAGS-="-Wl,--as-needed" # ( https://github.com/InBetweenNames/gentooLTO/issues/50 )
-media-libs/ilmbase *FLAGS+=-lrt # needed for linker to build media-libs/openexr with LTO
 media-video/aegisub NOLDADD=1 C*FLAGS-="-Wl,*" # does not build when -Wl linker flags are passed to the compiler through C*FLAGS
 net-mail/mailutils "has ldap ${IUSE//+} && use ldap && FlagAdd LDFLAGS -llber" #With LTO, this dependency must be linked in explicitly to resolve undefined reference errors "ber_memvfree" and so on
 sys-devel/gettext *FLAGS+=-lm # needed for linker to resolve libm's log10 -- only needed for LTO
