feat: commented all untested workarounds
This comments all untested workarounds. This will make it easier to see
which are needed and incrementatlly enable them. Once tested, they can
be moved to the un-prefixed package.cflags files.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/untested-lto.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-lto.conf
@@ -1,127 +1,127 @@
-# BEGIN: lto
+# BEGIN: Untested lto
 # Packages which cannot be built with LTO at all
-app-admin/keepassxc *FLAGS-=-flto* # segfaults on start since Qt 5.15.1
-app-emulation/dosemu *FLAGS-=-flto* # Issue #163
-app-emulation/libguestfs *FLAGS-=-flto*
-app-emulation/virtualbox-extpack-oracle *FLAGS-=-flto*
-app-emulation/virtualbox *FLAGS-=-flto*
-app-emulation/wine* *FLAGS-=-flto*
-app-office/gnucash *FLAGS-=-flto* # error: type ‘struct _iterate’ violates the C++ One Definition Rule [-Werror=odr]
-app-office/libreoffice "has firebird ${IUSE//+} && use firebird && FlagSubAllFlags -flto*"
-app-office/scribus *FLAGS-=-flto* # Scribus crashes on startup if compiled with LTO
-app-text/yodl *FLAGS-=-flto* # Fixes build
-cross-arm-none-eabi/newlib *FLAGS-=-flto* # Causes 'arm-none-eabi-gcc' to segfault
-cross-i686-w64-mingw32/mingw64-runtime *FLAGS-=-flto* # linking errors
-cross-x86_64-w64-mingw32/mingw64-runtime *FLAGS-=-flto* # linking errors
-dev-db/firebird *FLAGS-=-flto*
-dev-db/mariadb *FLAGS-=-flto*
-dev-db/mysql-connector-c *FLAGS-=-flto* # required to compiled mysql-connector-c
-games-fps/gzdoom *FLAGS-=-flto* # Assertion `Class != nullptr' failed. SIGABRT
-dev-java/icedtea *FLAGS-=-flto*
-<dev-java/openjdk-14 *FLAGS-=-flto* # Issue #204, undefined references with LTO.
-dev-lang/erlang *FLAGS-=-flto* # Starting with Erlang 24.0, yeccparser.erl: internal error in pass beam_kernel_to_ssa
-dev-lang/lua *FLAGS-=-flto* # Causes issues building packages like neovim and awesomewm, fixes #772
-dev-lang/mono *FLAGS-=-flto*
->=dev-lang/php-7.2.0 *FLAGS-=-flto* # lto-wrapper link failure / https://github.com/InBetweenNames/gentooLTO/issues/135
-dev-lang/spidermonkey *FLAGS-=-flto*
-dev-libs/libbpf *FLAGS-=-flto* # lto-wrapper link failure
-dev-libs/libsigsegv *FLAGS-=-flto* # Issue #189
-dev-libs/weston *FLAGS-=-flto*
-dev-python/libvirt-python *FLAGS-=-flto* # ICE with GCC 10.2.0
-dev-scheme/guile *FLAGS-=-flto* # Issue #193
-dev-util/github-cli *FLAGS-=-flto*
-dev-util/radare2 *FLAGS-=-flto* # ICE in IPA pass
-dev-vcs/cvs *FLAGS-=-flto* # Undefined references
-games-action/extreme-tuxracer *FLAGS-=-flto*
-gnome-base/gnome-keyring *FLAGS-=-flto*
-gnustep-base/gnustep-make *FLAGS-=-flto* # Issue #581, tools to build gnustep-base/gnustep-base, if built with LTO doesn't build gnustep code
-kde-apps/kdenlive *FLAGS-=-flto*
-kde-frameworks/kjs *FLAGS-=-flto* # Issue #181
-mail-filter/procmail *FLAGS-=-flto* # Causes compile to hang indefinitely
-media-gfx/shotwell *FLAGS-=-flto* #Library search error with LTO enabled
-media-libs/mlt *FLAGS-=-flto*
-media-sound/pulseaudio *FLAGS-=-flto*
-media-video/mplayer *FLAGS-=-flto*
-net-libs/webkit-gtk:3 *FLAGS-=-flto*
-net-libs/webkit-gtk:4 *FLAGS-=-flto*
-net-misc/autossh *FLAGS-=-flto* # Undefined references
-net-misc/dhcp "has server ${IUSE//+} && use server && FlagSubAllFlags -flto*" # Cannot be built with LTO by default, but can if "server" USE is disabled
-net-misc/lksctp-tools *FLAGS-=-flto* # function `main': <artificial>:(.text.startup+0x16de): undefined reference to `sctp_connectx'
-net-misc/nextcloud-client *FLAGS-="-flto"* # Segfaults at start with libQt5Core.so
-net-misc/nx *FLAGS-=-flto* # ODR violation during compilation
-net-news/newsboat *FLAGS-=-flto* # Fails to build with LTO
-net-p2p/cpuminer-opt *FLAGS-=-flto*
-net-p2p/retroshare *FLAGS-=-flto* # Issue #129, ICE on amd64
-net-wireless/aircrack-ng *FLAGS-=-flto*
-sci-electronics/kicad *FLAGS-=-flto* # Issue #168
-dev-python/scipy *FLAGS-=-flto*
-sys-apps/acl *FLAGS-=-flto* # Issue #209, builds fine but we cannot set any acl value using the program.
-sys-apps/fakechroot *FLAGS-=-flto* # "Cgraph edge statement index out of range" error when linking with LTO enabled
-sys-apps/fwupd *FLAGS-=-flto* # Issue #225, LTO causes runtime failures
-sys-cluster/ceph *FLAGS-=-flto*  # linking error during compilation
-sys-cluster/glusterfs *FLAGS-=-flto* # undefined reference to `glfs_subvol_done'
->=sys-libs/efivar-38 *FLAGS-="-flto*" # Error when compiling with LTO per PR #823
-sys-libs/libcxxabi *FLAGS-=-flto* # /var/tmp/portage/sys-libs/libcxxabi-4.0.1/temp/ccXYODmk.ltrans0.ltrans.o:<artificial>:DW.ref.__gcc_personality_v0: error: undefined reference to '__gcc_personality_v0'
-sys-libs/libselinux *FLAGS-=-flto*
-sys-libs/libsemanage *FLAGS-=-flto*
-sys-libs/libsepol *FLAGS-=-flto*
-sys-libs/musl *FLAGS-=-flto*
-sys-process/criu *FLAGS-=-pipe* *FLAGS-=-flto* *FLAGS-="-fuse-linker-plugin" LDFLAGS-="-Wl,--hash-style=gnu" *FLAGS-="${GRAPHITE}" # Fewer settings may be possible. Needs testing. (Dependency of LXC.)
-www-apps/hugo *FLAGS-=-flto*
-x11-drivers/xf86-video-intel *FLAGS-=-flto*
-# END: lto
+# app-admin/keepassxc *FLAGS-=-flto* # segfaults on start since Qt 5.15.1
+# app-emulation/dosemu *FLAGS-=-flto* # Issue #163
+# app-emulation/libguestfs *FLAGS-=-flto*
+# app-emulation/virtualbox-extpack-oracle *FLAGS-=-flto*
+# app-emulation/virtualbox *FLAGS-=-flto*
+# app-emulation/wine* *FLAGS-=-flto*
+# app-office/gnucash *FLAGS-=-flto* # error: type ‘struct _iterate’ violates the C++ One Definition Rule [-Werror=odr]
+# app-office/libreoffice "has firebird ${IUSE//+} && use firebird && FlagSubAllFlags -flto*"
+# app-office/scribus *FLAGS-=-flto* # Scribus crashes on startup if compiled with LTO
+# app-text/yodl *FLAGS-=-flto* # Fixes build
+# cross-arm-none-eabi/newlib *FLAGS-=-flto* # Causes 'arm-none-eabi-gcc' to segfault
+# cross-i686-w64-mingw32/mingw64-runtime *FLAGS-=-flto* # linking errors
+# cross-x86_64-w64-mingw32/mingw64-runtime *FLAGS-=-flto* # linking errors
+# dev-db/firebird *FLAGS-=-flto*
+# dev-db/mariadb *FLAGS-=-flto*
+# dev-db/mysql-connector-c *FLAGS-=-flto* # required to compiled mysql-connector-c
+# games-fps/gzdoom *FLAGS-=-flto* # Assertion `Class != nullptr' failed. SIGABRT
+# dev-java/icedtea *FLAGS-=-flto*
+# <dev-java/openjdk-14 *FLAGS-=-flto* # Issue #204, undefined references with LTO.
+# dev-lang/erlang *FLAGS-=-flto* # Starting with Erlang 24.0, yeccparser.erl: internal error in pass beam_kernel_to_ssa
+# dev-lang/lua *FLAGS-=-flto* # Causes issues building packages like neovim and awesomewm, fixes #772
+# dev-lang/mono *FLAGS-=-flto*
+# >=dev-lang/php-7.2.0 *FLAGS-=-flto* # lto-wrapper link failure / https://github.com/InBetweenNames/gentooLTO/issues/135
+# dev-lang/spidermonkey *FLAGS-=-flto*
+# dev-libs/libbpf *FLAGS-=-flto* # lto-wrapper link failure
+# dev-libs/libsigsegv *FLAGS-=-flto* # Issue #189
+# dev-libs/weston *FLAGS-=-flto*
+# dev-python/libvirt-python *FLAGS-=-flto* # ICE with GCC 10.2.0
+# dev-scheme/guile *FLAGS-=-flto* # Issue #193
+# dev-util/github-cli *FLAGS-=-flto*
+# dev-util/radare2 *FLAGS-=-flto* # ICE in IPA pass
+# dev-vcs/cvs *FLAGS-=-flto* # Undefined references
+# games-action/extreme-tuxracer *FLAGS-=-flto*
+# gnome-base/gnome-keyring *FLAGS-=-flto*
+# gnustep-base/gnustep-make *FLAGS-=-flto* # Issue #581, tools to build gnustep-base/gnustep-base, if built with LTO doesn't build gnustep code
+# kde-apps/kdenlive *FLAGS-=-flto*
+# kde-frameworks/kjs *FLAGS-=-flto* # Issue #181
+# mail-filter/procmail *FLAGS-=-flto* # Causes compile to hang indefinitely
+# media-gfx/shotwell *FLAGS-=-flto* #Library search error with LTO enabled
+# media-libs/mlt *FLAGS-=-flto*
+# media-sound/pulseaudio *FLAGS-=-flto*
+# media-video/mplayer *FLAGS-=-flto*
+# net-libs/webkit-gtk:3 *FLAGS-=-flto*
+# net-libs/webkit-gtk:4 *FLAGS-=-flto*
+# net-misc/autossh *FLAGS-=-flto* # Undefined references
+# net-misc/dhcp "has server ${IUSE//+} && use server && FlagSubAllFlags -flto*" # Cannot be built with LTO by default, but can if "server" USE is disabled
+# net-misc/lksctp-tools *FLAGS-=-flto* # function `main': <artificial>:(.text.startup+0x16de): undefined reference to `sctp_connectx'
+# net-misc/nextcloud-client *FLAGS-="-flto"* # Segfaults at start with libQt5Core.so
+# net-misc/nx *FLAGS-=-flto* # ODR violation during compilation
+# net-news/newsboat *FLAGS-=-flto* # Fails to build with LTO
+# net-p2p/cpuminer-opt *FLAGS-=-flto*
+# net-p2p/retroshare *FLAGS-=-flto* # Issue #129, ICE on amd64
+# net-wireless/aircrack-ng *FLAGS-=-flto*
+# sci-electronics/kicad *FLAGS-=-flto* # Issue #168
+# dev-python/scipy *FLAGS-=-flto*
+# sys-apps/acl *FLAGS-=-flto* # Issue #209, builds fine but we cannot set any acl value using the program.
+# sys-apps/fakechroot *FLAGS-=-flto* # "Cgraph edge statement index out of range" error when linking with LTO enabled
+# sys-apps/fwupd *FLAGS-=-flto* # Issue #225, LTO causes runtime failures
+# sys-cluster/ceph *FLAGS-=-flto*  # linking error during compilation
+# sys-cluster/glusterfs *FLAGS-=-flto* # undefined reference to `glfs_subvol_done'
+# >=sys-libs/efivar-38 *FLAGS-="-flto*" # Error when compiling with LTO per PR #823
+# sys-libs/libcxxabi *FLAGS-=-flto* # /var/tmp/portage/sys-libs/libcxxabi-4.0.1/temp/ccXYODmk.ltrans0.ltrans.o:<artificial>:DW.ref.__gcc_personality_v0: error: undefined reference to '__gcc_personality_v0'
+# sys-libs/libselinux *FLAGS-=-flto*
+# sys-libs/libsemanage *FLAGS-=-flto*
+# sys-libs/libsepol *FLAGS-=-flto*
+# sys-libs/musl *FLAGS-=-flto*
+# sys-process/criu *FLAGS-=-pipe* *FLAGS-=-flto* *FLAGS-="-fuse-linker-plugin" LDFLAGS-="-Wl,--hash-style=gnu" *FLAGS-="${GRAPHITE}" # Fewer settings may be possible. Needs testing. (Dependency of LXC.)
+# www-apps/hugo *FLAGS-=-flto*
+# x11-drivers/xf86-video-intel *FLAGS-=-flto*
+# END: Untested lto
 
-# BEGIN: ffat-lto-objects
+# BEGIN: Untested ffat-lto-objects
 # Packages which require fat LTO objects in order to build (TESTING: STRIP_MASK) or which others depend on non-LTO symbols
-app-crypt/efitools *FLAGS+=-ffat-lto-objects # textrel?
-app-editors/vim "has perl ${IUSE//+} && use perl && FlagAddAllFlags -ffat-lto-objects" # required for perl USE flag
-dev-haskell/* *FLAGS+=-ffat-lto-objects #This is so non-portage GHC compilations work, as GHC is oblivious to LTO.  portage builds are fine.
-dev-lang/moarvm *FLAGS+=-ffat-lto-objects # required for perl6 (i.e., dev-lang/nqp and dev-lang/rakudo to build)
-dev-util/cargo-c *FLAGS+=-ffat-lto-objects # fails to link against ssh functions without
-dev-util/sccache *FLAGS+=-ffat-lto-objects # fails to link
-net-libs/quiche *FLAGS+=-ffat-lto-objects # relocation R_X86_64_PC32 against undefined hidden symbol `GFp_ia32cap_P' can not be used when making a shared object
-sci-libs/mpir *FLAGS+=-ffat-lto-objects # compilation error without fat LTO (not linking error)
-sys-apps/bat *FLAGS+=-ffat-lto-objects # fails to link against git2 functions
-sys-apps/exa *FLAGS+=-ffat-lto-objects # fails to link against git2 functions
-sys-boot/syslinux *FLAGS+=-ffat-lto-objects #Requires ld.bfd
-sys-libs/libosinfo *FLAGS+=-ffat-lto-objects # Causes virt-manager to segfault when opening VM window. May be related to GCC 11. Seen with 1.9.0
-sys-power/nut *FLAGS+=-ffat-lto-objects # fails during configure otherwise
-x11-terms/alacritty *FLAGS+=-ffat-lto-objects
-# END: ffat-lto-objects
+# app-crypt/efitools *FLAGS+=-ffat-lto-objects # textrel?
+# app-editors/vim "has perl ${IUSE//+} && use perl && FlagAddAllFlags -ffat-lto-objects" # required for perl USE flag
+# dev-haskell/* *FLAGS+=-ffat-lto-objects #This is so non-portage GHC compilations work, as GHC is oblivious to LTO.  portage builds are fine.
+# dev-lang/moarvm *FLAGS+=-ffat-lto-objects # required for perl6 (i.e., dev-lang/nqp and dev-lang/rakudo to build)
+# dev-util/cargo-c *FLAGS+=-ffat-lto-objects # fails to link against ssh functions without
+# dev-util/sccache *FLAGS+=-ffat-lto-objects # fails to link
+# net-libs/quiche *FLAGS+=-ffat-lto-objects # relocation R_X86_64_PC32 against undefined hidden symbol `GFp_ia32cap_P' can not be used when making a shared object
+# sci-libs/mpir *FLAGS+=-ffat-lto-objects # compilation error without fat LTO (not linking error)
+# sys-apps/bat *FLAGS+=-ffat-lto-objects # fails to link against git2 functions
+# sys-apps/exa *FLAGS+=-ffat-lto-objects # fails to link against git2 functions
+# sys-boot/syslinux *FLAGS+=-ffat-lto-objects #Requires ld.bfd
+# sys-libs/libosinfo *FLAGS+=-ffat-lto-objects # Causes virt-manager to segfault when opening VM window. May be related to GCC 11. Seen with 1.9.0
+# sys-power/nut *FLAGS+=-ffat-lto-objects # fails during configure otherwise
+# x11-terms/alacritty *FLAGS+=-ffat-lto-objects
+# END: Untested ffat-lto-objects
 
-# BEGIN: LTO not recommended
+# BEGIN: Untested LTO not recommended
 # Packages which can be built with LTO but leads to problems/crashes/segfaults
-app-cdr/cdrtools *FLAGS-=-flto* # SCSI buffer size 0 when attempting to burn disc, reports "Unknown error 64512"
-app-crypt/gcr *FLAGS-=-flto* # Test failure
-dev-lang/ruby *FLAGS-=-flto* # Test failure
-dev-libs/folks *FLAGS-=-flto* # Programs which depend on folks fail to launch, https://gitlab.gnome.org/GNOME/folks/-/issues/123
->=dev-libs/gjs-1.66.1 *FLAGS-=-flto* # generates general protection fault when starting up gnome
-dev-libs/rocr-runtime *FLAGS-=-flto* # Causes crashes in multiple OpenCL tools
-dev-qt/qtscript *FLAGS-=-flto* #LTO patch exists, but crashes on newer Qt versions.  Needs to be updated.
-dev-scheme/gambit *FLAGS-=-flto* # Runtime errors when gsc when built with LTO on > GCC 8
-media-libs/mesa "has video_cards_i965 ${IUSE//+} && use video_cards_i965 && FlagSubAllFlags -flto*"
-media-sound/jack2 *FLAGS-=-flto* # segfault in libjack.so.0.1.0 when ANY app trying to use it (breaks everithing built w/ JACK support)
-net-misc/networkmanager *FLAGS-=-flto* # Test failure
-net-news/rssguard *FLAGS-=-flto* # https://bugreports.qt.io/browse/QTBUG-41301 and https://github.com/martinrotter/rssguard/issues/156
-net-proxy/privoxy *FLAGS-=-flto* #Issue #145, service will not start when built with LTO
-sci-libs/tensorflow *FLAGS-=-flto* # Issue #432 tensorflow-estimator fails with missing symbol __cpu_model
-sci-misc/boinc *FLAGS-=-flto* # buffer overflow when starting boinc_client
-sys-apps/apparmor *FLAGS-=-flto* # Issue #299, ODR violation, still builds and runs on some configurations
-sys-fs/cryfs *FLAGS-=-flto* # Test failure
-sys-libs/libapparmor *FLAGS-=-flto* # Undefined symbol error when trying to compile sys-apps/apparmor
-app-misc/openrgb *FLAGS-=-flto* # Segmentation fault on launch
-# END: LTO not recommended
+# app-cdr/cdrtools *FLAGS-=-flto* # SCSI buffer size 0 when attempting to burn disc, reports "Unknown error 64512"
+# app-crypt/gcr *FLAGS-=-flto* # Test failure
+# dev-lang/ruby *FLAGS-=-flto* # Test failure
+# dev-libs/folks *FLAGS-=-flto* # Programs which depend on folks fail to launch, https://gitlab.gnome.org/GNOME/folks/-/issues/123
+# >=dev-libs/gjs-1.66.1 *FLAGS-=-flto* # generates general protection fault when starting up gnome
+# dev-libs/rocr-runtime *FLAGS-=-flto* # Causes crashes in multiple OpenCL tools
+# dev-qt/qtscript *FLAGS-=-flto* #LTO patch exists, but crashes on newer Qt versions.  Needs to be updated.
+# dev-scheme/gambit *FLAGS-=-flto* # Runtime errors when gsc when built with LTO on > GCC 8
+# media-libs/mesa "has video_cards_i965 ${IUSE//+} && use video_cards_i965 && FlagSubAllFlags -flto*"
+# media-sound/jack2 *FLAGS-=-flto* # segfault in libjack.so.0.1.0 when ANY app trying to use it (breaks everithing built w/ JACK support)
+# net-misc/networkmanager *FLAGS-=-flto* # Test failure
+# net-news/rssguard *FLAGS-=-flto* # https://bugreports.qt.io/browse/QTBUG-41301 and https://github.com/martinrotter/rssguard/issues/156
+# net-proxy/privoxy *FLAGS-=-flto* #Issue #145, service will not start when built with LTO
+# sci-libs/tensorflow *FLAGS-=-flto* # Issue #432 tensorflow-estimator fails with missing symbol __cpu_model
+# sci-misc/boinc *FLAGS-=-flto* # buffer overflow when starting boinc_client
+# sys-apps/apparmor *FLAGS-=-flto* # Issue #299, ODR violation, still builds and runs on some configurations
+# sys-fs/cryfs *FLAGS-=-flto* # Test failure
+# sys-libs/libapparmor *FLAGS-=-flto* # Undefined symbol error when trying to compile sys-apps/apparmor
+# app-misc/openrgb *FLAGS-=-flto* # Segmentation fault on launch
+# END: Untested LTO not recommended
 
-# BEGIN: Build Workarounds
+# BEGIN: Untested Build Workarounds
 # Packages which require build workarounds to be built with LTO that can be resolved directly in *FLAGS
-dev-lisp/clisp *FLAGS+=-falign-functions # Issue #128.  Function alignment problem.
-kde-apps/dolphin *FLAGS-="-Wl,--as-needed" # ( https://github.com/InBetweenNames/gentooLTO/issues/50 )
-media-video/aegisub NOLDADD=1 C*FLAGS-="-Wl,*" # does not build when -Wl linker flags are passed to the compiler through C*FLAGS
-net-mail/mailutils "has ldap ${IUSE//+} && use ldap && FlagAdd LDFLAGS -llber" #With LTO, this dependency must be linked in explicitly to resolve undefined reference errors "ber_memvfree" and so on
-sys-power/thermald *FLAGS+=-Wl,--no-fatal-warnings *FLAGS+=-Wno-error
-# END: Build Workarounds
+# dev-lisp/clisp *FLAGS+=-falign-functions # Issue #128.  Function alignment problem.
+# kde-apps/dolphin *FLAGS-="-Wl,--as-needed" # ( https://github.com/InBetweenNames/gentooLTO/issues/50 )
+# media-video/aegisub NOLDADD=1 C*FLAGS-="-Wl,*" # does not build when -Wl linker flags are passed to the compiler through C*FLAGS
+# net-mail/mailutils "has ldap ${IUSE//+} && use ldap && FlagAdd LDFLAGS -llber" #With LTO, this dependency must be linked in explicitly to resolve undefined reference errors "ber_memvfree" and so on
+# sys-power/thermald *FLAGS+=-Wl,--no-fatal-warnings *FLAGS+=-Wno-error
+# END: Untested Build Workarounds
 
-# BEGIN: Misc Workarounds
-dev-lang/ruby *FLAGS+=-fno-strict-aliasing # No build or runtime failures, but recommended by the package to avoid incorrect optimizations
-sys-libs/compiler-rt-sanitizers *FLAGS+=-Wno-unused-command-line-argument # Test failure
-# END: Misc Workarounds
+# BEGIN: Untested Misc Workarounds
+# dev-lang/ruby *FLAGS+=-fno-strict-aliasing # No build or runtime failures, but recommended by the package to avoid incorrect optimizations
+# sys-libs/compiler-rt-sanitizers *FLAGS+=-Wno-unused-command-line-argument # Test failure
+# END: Untested Misc Workarounds
