--- a/sys-config/ltoize/files/package.cflags/untested-devirtualize-at-ltrans.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-devirtualize-at-ltrans.conf
@@ -1,3 +1,3 @@
-# BEGIN: -fdevirtualize-at-ltrans workarounds
-app-text/lcdf-typetools *FLAGS-="-fdevirtualize-at-ltrans" # ICE on static-var pass
-# END: -fdevirtualize-at-ltrans workarounds
+# BEGIN: Untested -fdevirtualize-at-ltrans workarounds
+# app-text/lcdf-typetools *FLAGS-="-fdevirtualize-at-ltrans" # ICE on static-var pass
+# END: Untested -fdevirtualize-at-ltrans workarounds
