--- a/sys-config/ltoize/files/package.cflags/untested-no-plt.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-no-plt.conf
@@ -1,6 +1,6 @@
-# BEGIN: No PLT workarounds
-app-emulation/wine-staging *FLAGS-="-fno-plt"
-app-emulation/wine-vanilla *FLAGS-="-fno-plt"
-dev-db/mysql-connector-c *FLAGS-="-fno-plt" # SIGABRT during compile if not used
-sys-libs/compiler-rt-sanitizers *FLAGS-="-fno-plt"
-# END: No PLT workarounds
+# BEGIN: Untested No PLT workarounds
+# app-emulation/wine-staging *FLAGS-="-fno-plt"
+# app-emulation/wine-vanilla *FLAGS-="-fno-plt"
+# dev-db/mysql-connector-c *FLAGS-="-fno-plt" # SIGABRT during compile if not used
+# sys-libs/compiler-rt-sanitizers *FLAGS-="-fno-plt"
+# END: Untested No PLT workarounds
