fix: sys-devel/binutils workarounds
sys-devel/binutils handles its own LTO, so we need to disable the flags
we add ourselves for it.

Graphite and ipa-pta are tested to work, but flag-o-matic needs disabled
for them to be applied.

devirtualize-at-ltrans breaks the tests.
no-semantic-interposition breaks the tests.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/devirtualize-at-ltrans.conf
+++ b/sys-config/ltoize/files/package.cflags/devirtualize-at-ltrans.conf
@@ -1,2 +1,3 @@
 # BEGIN: -fdevirtualize-at-ltrans workarounds
+sys-devel/binutils *FLAGS-="${DEVIRTLTO}"  # tests fail when present
 # END: -fdevirtualize-at-ltrans workarounds
