--- a/sys-config/ltoize/files/package.cflags/flag-o-matic.conf
+++ b/sys-config/ltoize/files/package.cflags/flag-o-matic.conf
@@ -1,2 +1,3 @@
 # BEGIN: override-flagomatic workarounds
+sys-devel/binutils LTO_ENABLE_FLAGOMATIC=no  # needed to enable graphite and ipa-pta
 # END: override-flagomatic workarounds
