--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -12,6 +12,7 @@
 
 # BEGIN: Build Workarounds
 # Packages which require build workarounds to be built with LTO that can be resolved directly in *FLAGS
+sys-devel/binutils *FLAGS-="-flto*"  # package handles its own LTO and setting it here breaks that
 # END: Build Workarounds
 
 # BEGIN: Misc Workarounds
