--- a/sys-config/ltoize/files/package.cflags/no-semantic-interposition.conf
+++ b/sys-config/ltoize/files/package.cflags/no-semantic-interposition.conf
@@ -1,2 +1,3 @@
 # BEGIN: Semantic Interposition workarounds
+sys-devel/binutils *FLAGS-="${SEMINTERPOS}"  # tests fail when present
 # END: Semantic Interposition Workarounds
