feat: add headers to untested files with counts
This adds a header to each untested file that lists the number of
workarounds in it which have yet to be tested.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/untested-clang.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-clang.conf
@@ -1,3 +1,5 @@
+# Remaining workarounds to be tested: 8
+
 # BEGIN: Untested Workarounds for LTO with Clang
 # dev-lang/python *FLAGS-=-flto* # https://bugs.gentoo.org/700012 : No -ffat-lto-objects on clang
 # dev-libs/libffi *FLAGS-=-flto* # error: changed section flags for .eh_frame https://github.com/libffi/libffi/issues/626 (abi_x86_32)
