--- a/sys-config/ltoize/files/package.cflags/untested-cmake-makefile.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-cmake-makefile.conf
@@ -1,3 +1,5 @@
+# Remaining workarounds to be tested: 5
+
 # BEGIN: Untested Will not build with ninja
 # app-doc/doxygen CMAKE_MAKEFILE_GENERATOR=emake
 # dev-lang/swi-prolog CMAKE_MAKEFILE_GENERATOR=emake
