--- a/sys-config/ltoize/files/package.cflags/untested-flag-o-matic.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-flag-o-matic.conf
@@ -1,3 +1,5 @@
+# Remaining workarounds to be tested: 23
+
 # BEGIN: Untested verride-flagomatic workarounds
 # app-crypt/johntheripper-jumbo LTO_ENABLE_FLAGOMATIC=yes
 # app-crypt/johntheripper LTO_ENABLE_FLAGOMATIC=yes
