--- a/sys-config/ltoize/files/package.cflags/untested-graphite.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-graphite.conf
@@ -1,3 +1,5 @@
+# Remaining workarounds to be tested: 1
+
 # BEGIN: Untested Graphite ICE (Internal Compiler Error)
 # Report them to the GCC team
 # sci-visualization/paraview *FLAGS-="${GRAPHITE}" # Removing Graphite optimizations allows build to complete with sane memory usage for --jobs > 1
