--- a/sys-config/ltoize/files/package.cflags/untested-ipa-pta.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-ipa-pta.conf
@@ -1,3 +1,5 @@
+# Remaining workarounds to be tested: 18
+
 # BEGIN: Untested -fipa-pta workarounds
 # dev-lang/R *FLAGS-="${IPAPTA}" # during IPA pass: pta lto1: internal compiler error: Segmentation fault
 # sys-devel/gcc *FLAGS-="${IPAPTA}"
