--- a/sys-config/ltoize/files/package.cflags/untested-lto.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-lto.conf
@@ -1,3 +1,5 @@
+# Remaining workarounds to be tested: 107
+
 # BEGIN: Untested lto
 # Packages which cannot be built with LTO at all
 # app-admin/keepassxc *FLAGS-=-flto* # segfaults on start since Qt 5.15.1
