--- a/sys-config/ltoize/files/package.cflags/untested-no-semantic-interposition.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-no-semantic-interposition.conf
@@ -1,3 +1,5 @@
+# Remaining workarounds to be tested: 11
+
 # BEGIN: Untested Semantic Interposition workarounds
 # app-crypt/tpm2-tss *FLAGS-="${SEMINTERPOS}" # Problem with inlining, see issue #592
 # app-emulation/libvirt *FLAGS-="${SEMINTERPOS}" # Test failure
