--- a/sys-config/ltoize/files/package.cflags/untested-optimizations.conf
+++ b/sys-config/ltoize/files/package.cflags/untested-optimizations.conf
@@ -1,3 +1,5 @@
+# Remaining workarounds to be tested: 22
+
 # BEGIN: Untested Deliberate -O3 workarounds
 # mail-filter/procmail /-O3/-O2 # Causes compile to hang indefinitely
 # media-libs/faad2 *FLAGS+=-fno-tree-loop-vectorize # causes subtly wrong decoding
