fix: enable dev-util/umockdev workaround
This enables the no-semantic-interposition workaround for umockdev now
that it has been tested as still being necessary.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/no-semantic-interposition.conf
+++ b/sys-config/ltoize/files/package.cflags/no-semantic-interposition.conf
@@ -1,3 +1,4 @@
 # BEGIN: Semantic Interposition workarounds
+dev-util/umockdev *FLAGS-="${SEMINTERPOS}" # /usr/include/bits/unistd.h:145:1: error: inlining failed in call to 'always_inline' 'readlink.localalias': function not inlinable
 sys-devel/binutils *FLAGS-="${SEMINTERPOS}"  # tests fail when present
 # END: Semantic Interposition Workarounds
