--- a/sys-config/ltoize/files/package.cflags/no-semantic-interposition.conf
+++ b/sys-config/ltoize/files/package.cflags/no-semantic-interposition.conf
@@ -1,4 +1,5 @@
 # BEGIN: Semantic Interposition workarounds
+app-crypt/gcr-3.41 *FLAGS-="${SEMINTERPOS}" # gcr:gck/attributes test fails if this is enabled
 dev-util/umockdev *FLAGS-="${SEMINTERPOS}" # /usr/include/bits/unistd.h:145:1: error: inlining failed in call to 'always_inline' 'readlink.localalias': function not inlinable
 sys-devel/binutils *FLAGS-="${SEMINTERPOS}"  # tests fail when present
 # END: Semantic Interposition Workarounds
