fix: dev-python/numpy workarounds
This removes the -Ofast workaround and adds one for LTO.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -1,5 +1,6 @@
 # BEGIN: lto
 # Packages which cannot be built with LTO at all
+dev-python/numpy *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 # END: lto
 
 # BEGIN: ffat-lto-objects
