--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -1,6 +1,7 @@
 # BEGIN: lto
 # Packages which cannot be built with LTO at all
 dev-python/numpy *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
+dev-scheme/guile *FLAGS-="-flto*"  # tests fail if built with LTO
 # END: lto
 
 # BEGIN: ffat-lto-objects
