--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -2,6 +2,7 @@
 # Packages which cannot be built with LTO at all
 dev-python/numpy *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-scheme/guile *FLAGS-="-flto*"  # tests fail if built with LTO
+media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 # END: lto
 
 # BEGIN: ffat-lto-objects
