fix: sys-devel/llvm workarounds
This removes the no-semantic-interposition and and -fno-finite-math
workarounds. It adds a workaround to disable ipa-pta, which breaks the
llvm tests.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/ipa-pta.conf
+++ b/sys-config/ltoize/files/package.cflags/ipa-pta.conf
@@ -1,2 +1,3 @@
 # BEGIN: -fipa-pta workarounds
+sys-devel/llvm *FLAGS-="${IPAPTA}"  # llvm tests fail when this is enabled
 # END: -fipa-pta workarounds
