fix: add app-text/texlive-core workaround
This has been tested to be incompatible with LTO.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -1,5 +1,6 @@
 # BEGIN: lto
 # Packages which cannot be built with LTO at all
+app-text/texlive-core *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-python/numpy *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-scheme/guile *FLAGS-="-flto*"  # tests fail if built with LTO
 media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
@@ -17,6 +18,10 @@ media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch 
 # Packages which require build workarounds to be built with LTO that can be resolved directly in *FLAGS
 sys-devel/binutils *FLAGS-="-flto*"  # package handles its own LTO and setting it here breaks that
 # END: Build Workarounds
+
+# BEGIN: LTO_WARNING_FLAGS workarounds
+app-text/texlive-core *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
+# END: LTO_WARNING_FLAGS workarounds
 
 # BEGIN: Misc Workarounds
 # END: Misc Workarounds
