fix: add dev-db/sqlite workaround
The package has been tested to compile fine with LTO, but the tests fail
when -Werror=lto-type-mismatch is enabled.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -21,6 +21,7 @@ sys-devel/binutils *FLAGS-="-flto*"  # package handles its own LTO and setting i
 
 # BEGIN: LTO_WARNING_FLAGS workarounds
 app-text/texlive-core *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
+dev-db/sqlite *FLAGS-="-Werror=lto-type-mismatch" # Tests fail with this flag but the package compiles fine
 # END: LTO_WARNING_FLAGS workarounds
 
 # BEGIN: Misc Workarounds
