--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -4,6 +4,7 @@ app-text/texlive-core *FLAGS-="-flto*" # fails to compile due to lto-type-mismat
 dev-python/numpy *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-scheme/guile *FLAGS-="-flto*"  # tests fail if built with LTO
 media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
+dev-libs/libev *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 # END: lto
 
 # BEGIN: ffat-lto-objects
@@ -23,6 +24,7 @@ sys-devel/binutils *FLAGS-="-flto*"  # package handles its own LTO and setting i
 app-text/texlive-core *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
 dev-db/sqlite *FLAGS-="-Werror=lto-type-mismatch" # Tests fail with this flag but the package compiles fine
 dev-libs/icu *FLAGS-="-Werror=odr" # Tests fail with this flag but the package compiles fine
+dev-libs/libev *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
 # END: LTO_WARNING_FLAGS workarounds
 
 # BEGIN: Misc Workarounds
