fix: add dev-libs/nspr workaround
The package compiles fine with LTO but the tests fail with
strict-aliasing enabled.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -25,6 +25,7 @@ app-text/texlive-core *FLAGS-="-Werror=strict-aliasing" # fails to compile due t
 dev-db/sqlite *FLAGS-="-Werror=lto-type-mismatch" # Tests fail with this flag but the package compiles fine
 dev-libs/icu *FLAGS-="-Werror=odr" # Tests fail with this flag but the package compiles fine
 dev-libs/libev *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
+dev-libs/nspr *FLAGS-="-Werror=strict-aliasing" # Tests fail with this flag but the package compiles fine
 # END: LTO_WARNING_FLAGS workarounds
 
 # BEGIN: Misc Workarounds
