fix: add dev-util/colm workaround
This package fails to compile with LTO enabled.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -5,6 +5,7 @@ dev-python/numpy *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch er
 dev-scheme/guile *FLAGS-="-flto*"  # tests fail if built with LTO
 media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-libs/libev *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
+dev-util/colm *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 # END: lto
 
 # BEGIN: ffat-lto-objects
