fix: add dev-util/gperf workaround
This package fails to compile with LTO enabled.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -6,6 +6,7 @@ dev-scheme/guile *FLAGS-="-flto*"  # tests fail if built with LTO
 media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-libs/libev *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 dev-util/colm *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
+dev-util/gperf *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 # END: lto
 
 # BEGIN: ffat-lto-objects
@@ -27,6 +28,7 @@ dev-db/sqlite *FLAGS-="-Werror=lto-type-mismatch" # Tests fail with this flag bu
 dev-libs/icu *FLAGS-="-Werror=odr" # Tests fail with this flag but the package compiles fine
 dev-libs/libev *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
 dev-libs/nspr *FLAGS-="-Werror=strict-aliasing" # Tests fail with this flag but the package compiles fine
+dev-util/gperf *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
 # END: LTO_WARNING_FLAGS workarounds
 
 # BEGIN: Misc Workarounds
