--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -7,6 +7,7 @@ media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch 
 dev-libs/libev *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 dev-util/colm *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-util/gperf *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
+sci-libs/lapack *FLAGS-="-flto*"  # fails to compile due to lto-type-mismatch error
 # END: lto
 
 # BEGIN: ffat-lto-objects
