fix: add sys-devel/autoconf workaround
This package fails to pass its tests when LTO is enabled.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -8,6 +8,7 @@ dev-libs/libev *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 dev-util/colm *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-util/gperf *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 sci-libs/lapack *FLAGS-="-flto*"  # fails to compile due to lto-type-mismatch error
+sys-devel/autoconf *FLAGS-="-flto*" # AC_DECL_YYTEXT test fails when LTO is enabled
 # END: lto
 
 # BEGIN: ffat-lto-objects
