fix: add media-gfx/graphite2 workarounds
This package fails to compile and pass its test with LTO or -O3.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -3,6 +3,7 @@
 app-text/texlive-core *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-python/numpy *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-scheme/guile *FLAGS-="-flto*"  # tests fail if built with LTO
+media-gfx/graphite2 *FLAGS-="-flto*" # fails to compile due to odr error
 media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-libs/libev *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 dev-util/colm *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
