--- a/sys-config/ltoize/files/package.cflags/optimizations.conf
+++ b/sys-config/ltoize/files/package.cflags/optimizations.conf
@@ -1,4 +1,5 @@
 # BEGIN: Deliberate -O3 workarounds
+media-gfx/graphite2 /-O3/-O2 # nametabletest test fails
 # END: Deliberate -O3 workarounds
 
 # BEGIN: -Ofast workarounds
