fix: add sys-devel/libtool workarounds and patch
This adds a patch from Fedora and the necessary workarounds to compile
libtool with LTO.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -14,6 +14,7 @@ sys-devel/autoconf *FLAGS-="-flto*" # AC_DECL_YYTEXT test fails when LTO is enab
 
 # BEGIN: ffat-lto-objects
 # Packages which require fat LTO objects in order to build (TESTING: STRIP_MASK) or which others depend on non-LTO symbols
+sys-devel/libtool *FLAGS+=-ffat-lto-objects  # Used by fedora
 # END: ffat-lto-objects
 
 # BEGIN: LTO not recommended
@@ -32,6 +33,7 @@ dev-libs/icu *FLAGS-="-Werror=odr" # Tests fail with this flag but the package c
 dev-libs/libev *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
 dev-libs/nspr *FLAGS-="-Werror=strict-aliasing" # Tests fail with this flag but the package compiles fine
 dev-util/gperf *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
+sys-devel/libtool *FLAGS-=-Werror=lto-type-mismatch # test fail if this flag is left enabled
 # END: LTO_WARNING_FLAGS workarounds
 
 # BEGIN: Misc Workarounds
