fix: add sys-libs/slang workaround
This package fails to compile with LTO.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -10,6 +10,7 @@ media-gfx/graphite2 *FLAGS-="-flto*" # fails to compile due to odr error
 media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 sci-libs/lapack *FLAGS-="-flto*"  # fails to compile due to lto-type-mismatch error
 sys-devel/autoconf *FLAGS-="-flto*" # AC_DECL_YYTEXT test fails when LTO is enabled
+sys-libs/slang *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 # END: lto
 
 # BEGIN: ffat-lto-objects
@@ -34,6 +35,7 @@ dev-libs/libev *FLAGS-="-Werror=strict-aliasing" # fails to compile due to stric
 dev-libs/nspr *FLAGS-="-Werror=strict-aliasing" # Tests fail with this flag but the package compiles fine
 dev-util/gperf *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
 sys-devel/libtool *FLAGS-=-Werror=lto-type-mismatch # test fail if this flag is left enabled
+sys-libs/slang *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
 # END: LTO_WARNING_FLAGS workarounds
 
 # BEGIN: Misc Workarounds
