fix: add media-libs/openh264 workaround
This package fails to pass its tests when graphite optimizations are
enabled.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/graphite.conf
+++ b/sys-config/ltoize/files/package.cflags/graphite.conf
@@ -1,3 +1,7 @@
 # BEGIN: Graphite ICE (Internal Compiler Error)
 # Report them to the GCC team
 # END: Graphite ICE (Internal Compiler Error)
+
+# BEGIN: Graphite Test failures
+media-libs/openh264 *FLAGS-="${GRAPHITE}"
+# END: Graphite Test failures
