fix: add x11-base/xorg-server workarounds
This package causes downstream tests to fail with ipa-pta is enabled.
Its own tests fail with -O3 is used.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/ipa-pta.conf
+++ b/sys-config/ltoize/files/package.cflags/ipa-pta.conf
@@ -1,3 +1,4 @@
 # BEGIN: -fipa-pta workarounds
 sys-devel/llvm *FLAGS-="${IPAPTA}"  # llvm tests fail when this is enabled
+x11-base/xorg-server *FLAGS-="${IPAPTA}" # causes downstream tests to fail
 # END: -fipa-pta workarounds
