--- a/sys-config/ltoize/files/package.cflags/optimizations.conf
+++ b/sys-config/ltoize/files/package.cflags/optimizations.conf
@@ -1,5 +1,6 @@
 # BEGIN: Deliberate -O3 workarounds
 media-gfx/graphite2 /-O3/-O2 # nametabletest test fails
+x11-base/xorg-server /-O3/-O2  # tests fail at -O3
 # END: Deliberate -O3 workarounds
 
 # BEGIN: -Ofast workarounds
