fix: add net-wireless/bluez workaround
The bluez package fails its tests when built with LTO.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -8,6 +8,7 @@ dev-util/colm *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-util/gperf *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 media-gfx/graphite2 *FLAGS-="-flto*" # fails to compile due to odr error
 media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
+net-wireless/bluez *FLAGS-="-flto*" # test fail when LTO is enabled
 sci-libs/lapack *FLAGS-="-flto*"  # fails to compile due to lto-type-mismatch error
 sys-devel/autoconf *FLAGS-="-flto*" # AC_DECL_YYTEXT test fails when LTO is enabled
 sys-libs/slang *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
