--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -1,6 +1,7 @@
 # BEGIN: lto
 # Packages which cannot be built with LTO at all
 app-text/texlive-core *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
+dev-build/autoconf *FLAGS-="-flto*" # AC_DECL_YYTEXT test fails when LTO is enabled
 dev-libs/libev *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 dev-python/numpy *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-scheme/guile *FLAGS-="-flto*"  # tests fail if built with LTO
@@ -10,13 +11,12 @@ media-gfx/graphite2 *FLAGS-="-flto*" # fails to compile due to odr error
 media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 net-wireless/bluez *FLAGS-="-flto*" # test fail when LTO is enabled
 sci-libs/lapack *FLAGS-="-flto*"  # fails to compile due to lto-type-mismatch error
-sys-devel/autoconf *FLAGS-="-flto*" # AC_DECL_YYTEXT test fails when LTO is enabled
 sys-libs/slang *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 # END: lto
 
 # BEGIN: ffat-lto-objects
 # Packages which require fat LTO objects in order to build (TESTING: STRIP_MASK) or which others depend on non-LTO symbols
-sys-devel/libtool *FLAGS+=-ffat-lto-objects  # Used by fedora
+dev-build/libtool *FLAGS+=-ffat-lto-objects  # Used by fedora
 # END: ffat-lto-objects
 
 # BEGIN: LTO not recommended
@@ -30,12 +30,12 @@ sys-devel/binutils *FLAGS-="-flto*"  # package handles its own LTO and setting i
 
 # BEGIN: LTO_WARNING_FLAGS workarounds
 app-text/texlive-core *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
+dev-build/libtool *FLAGS-=-Werror=lto-type-mismatch # test fail if this flag is left enabled
 dev-db/sqlite *FLAGS-="-Werror=lto-type-mismatch" # Tests fail with this flag but the package compiles fine
 dev-libs/icu *FLAGS-="-Werror=odr" # Tests fail with this flag but the package compiles fine
 dev-libs/libev *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
 dev-libs/nspr *FLAGS-="-Werror=strict-aliasing" # Tests fail with this flag but the package compiles fine
 dev-util/gperf *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
-sys-devel/libtool *FLAGS-=-Werror=lto-type-mismatch # test fail if this flag is left enabled
 sys-libs/slang *FLAGS-="-Werror=strict-aliasing" # fails to compile due to strict-aliasing error
 # END: LTO_WARNING_FLAGS workarounds
 
