fix: add sys-libs/gpm workaround
gpm fails to build with lto.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -11,6 +11,7 @@ media-gfx/graphite2 *FLAGS-="-flto*" # fails to compile due to odr error
 media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 net-wireless/bluez *FLAGS-="-flto*" # test fail when LTO is enabled
 sci-libs/lapack *FLAGS-="-flto*"  # fails to compile due to lto-type-mismatch error
+sys-libs/gpm *FLAGS-="-flto*"  # fails to compile due to lto-type-mismatch error
 sys-libs/slang *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 # END: lto
 
