fix: add dev-cpp/abseil-cpp workarounds
abseil-cpp needed lto and ipa-pta flags to be disabled for builds
to succeed.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/ipa-pta.conf
+++ b/sys-config/ltoize/files/package.cflags/ipa-pta.conf
@@ -1,4 +1,5 @@
 # BEGIN: -fipa-pta workarounds
+dev-cpp/abseil-cpp *FLAGS-="${IPAPTA}" # builds hang (or are very slow) when this is enabled
 sys-devel/llvm *FLAGS-="${IPAPTA}"  # llvm tests fail when this is enabled
 x11-base/xorg-server *FLAGS-="${IPAPTA}" # causes downstream tests to fail
 # END: -fipa-pta workarounds
