--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -2,6 +2,7 @@
 # Packages which cannot be built with LTO at all
 app-text/texlive-core *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-build/autoconf *FLAGS-="-flto*" # AC_DECL_YYTEXT test fails when LTO is enabled
+dev-cpp/abseil-cpp *FLAGS-="-flto*" # fails to compile with lto
 dev-libs/libev *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 dev-python/numpy *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-scheme/guile *FLAGS-="-flto*"  # tests fail if built with LTO
