fix: add net-misc/networkmanager workaround
Tests fail when lto is enabled.

Signed-off-by: Jaremy Hatler <hatler.jaremy@gmail.com>

--- a/sys-config/ltoize/files/package.cflags/lto.conf
+++ b/sys-config/ltoize/files/package.cflags/lto.conf
@@ -10,6 +10,7 @@ dev-util/colm *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
 dev-util/gperf *FLAGS-="-flto*" # fails to compile due to strict-aliasing error
 media-gfx/graphite2 *FLAGS-="-flto*" # fails to compile due to odr error
 media-video/ffmpeg *FLAGS-="-flto*" # fails to compile due to lto-type-mismatch error
+net-misc/networkmanager *FLAGS-="-flto*" # test failure in a linker script
 net-wireless/bluez *FLAGS-="-flto*" # test fail when LTO is enabled
 sci-libs/lapack *FLAGS-="-flto*"  # fails to compile due to lto-type-mismatch error
 sys-libs/gpm *FLAGS-="-flto*"  # fails to compile due to lto-type-mismatch error
